# digame

./: .devcontainer.json  .dockerignore  .gitignore  DEPENDENCY_FIXES_README.md  Dockerfile  INTEGRATION_PLAN.md  LICENSE  PHASE1_INTEGRATION_GUIDE.md  README.md  activate_digame.sh  circular_import_analysis.json  docker-compose.yml  fix_circular_imports.py  fix_dependencies_and_imports.py  fix_import_paths.py  integration_analysis.json  pyproject.toml  requirements.txt  setup.py  setup_dev_env.py
digame/app/: __init__.py  behavior.py  database.py  db.py  main.py  predictive.py  pyproject.toml  setup.py
digame/app/auth/: IMPLEMENTATION_SUMMARY.md  README.md  auth_dependencies.py  auth_service.py  config.py  enhanced_auth_dependencies.py  examples.py  init_auth_db.py  jwt_handler.py  middleware.py
digame/app/crud/: __init__.py  anomaly_crud.py  behavior_model_crud.py  connection_crud.py  education_crud.py  experience_crud.py  job_crud.py  notification_crud.py  onboarding_crud.py  process_notes_crud.py  project_crud.py  rbac_crud.py  task_crud.py  tenant_crud.py  user_crud.py  user_setting_crud.py
digame/app/migrations_manual_scripts/: activity_features_migration.py  anomaly_detection_migration.py  process_notes_migration.py  task_migration.py
digame/app/models/: __init__.py  activity.py  activity_features.py  analytics.py  anomaly.py  behavior_model.py  connection.py  dashboard_models.py  education.py  enterprise_dashboard.py  example_custom_model.pth  experience.py  integration.py  job.py  market_intelligence.py  notification.py  onboarding_models.py  process_notes.py  project.py  rbac.py  reporting.py  security.py  sso.py  task.py  tenant.py  test_model.py  user.py  user_setting.py  (+1 more)
(+440 files in other folders)
